# manifest

./: downloader_filelist.txt  versions.json
.github/workflows/: watchdog.yaml
game/G152_10003_Y8xXrXk65DqFHEDgApn3cpK5lfczpFx5/: index.json
game/G152_10004_j5GWFuUFlb8N31Wi2uS3ZAVHcb7ZGN7y/: index.json
game/G152_10008_Pa0Q0EMFxukjEqX33pF9Uyvdc8MaGPSz/: index.json
game/G153_50004_obOHXFrFanqsaIEOmuKroCcbZkQRBC7c/: index.json
game/G153_50013_HiDX7UaJOXpKl3pigJwVxhg5z1wllus5/: index.json
game/cn-beta/: index.json  info.json  resources.json
game/cn-live/: index.json  info.json  resources.json
game/global-beta/: index.json  resources.json
game/global-live/: index.json  info.json  resources.json
game/unknown-live/: index.json  info.json  resources.json
launcher/G152_10003_Y8xXrXk65DqFHEDgApn3cpK5lfczpFx5/: index.json
launcher/G152_10004_j5GWFuUFlb8N31Wi2uS3ZAVHcb7ZGN7y/: index.json
launcher/G152_10008_Pa0Q0EMFxukjEqX33pF9Uyvdc8MaGPSz/: index.json
launcher/G153_50004_obOHXFrFanqsaIEOmuKroCcbZkQRBC7c/: index.json
launcher/G153_50013_HiDX7UaJOXpKl3pigJwVxhg5z1wllus5/: index.json
launcher/cn-beta/: index.json
launcher/cn-live/: index.json
launcher/global-beta/: index.json
launcher/global-live/: index.json
launcher/unknown-live/: index.json
src/dumper/: Cargo.toml
src/dumper/src/: main.rs  types.rs
src/watchdog/: Cargo.toml
src/watchdog/src/: main.rs
watchdog/: Cargo.toml
watchdog/src/: main.rs
